# ratagit

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  ENGINEERING.md  QWEN.md  README.md  coverage_analysis.md  skills-lock.json
.cargo/: config.toml
crates/ratagit-app/: Cargo.toml
crates/ratagit-app/src/: main.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_REFACTOR.md  CI.md  CODEX.md  DECISIONS.md  DESIGN.md  DEVELOPMENT_LOOP.md  DEVELOPMENT_MODEL.md  EXEC_PLAN.md  INVARIANTS.md  MILESTONES.md  OBSERVABILITY.md  PHASE1_REPORT.md  PRODUCT.md  PROJECT_OVERVIEW.md  QUALITY.md  REFACTORING_TODO.md  RELIABILITY.md  ROADMAP.md  STATUS.md  TESTING.md  TOOLING.md  arch.md
libs/ratagit-harness/: Cargo.toml
libs/ratagit-harness/src/: async_runtime.rs  lib.rs  scheduler.rs
libs/ratagit-harness/src/async_runtime/: tests.rs
libs/ratagit-harness/tests/: harness.rs  real_git_smoke.rs
libs/ratagit-ui/: Cargo.toml
libs/ratagit-ui/src/: branch_modal.rs  command_palette_modal.rs  discard_modal.rs  editor_modal.rs  frame.rs  layout.rs  lib.rs  loading_indicator.rs  modal.rs  panel_details.rs  panel_format.rs  panel_left.rs  panel_projection.rs  panel_scroll.rs  panel_shortcuts.rs  panel_types.rs  panels.rs  reset_modal.rs  stage_all_modal.rs  sync_modal.rs  terminal.rs  text.rs  theme.rs
libs/ratagit-ui/tests/: snapshots.rs
libs/ratagit-ui/tests/snapshots/: snapshots__terminal_snapshot_branch_commit_files_subview.snap  snapshots__terminal_snapshot_branch_commits_subview.snap  snapshots__terminal_snapshot_branches_auto_stash_confirm_modal.snap  snapshots__terminal_snapshot_branches_both_delete_confirm_modal.snap  snapshots__terminal_snapshot_branches_create_modal.snap  snapshots__terminal_snapshot_branches_delete_modal.snap  snapshots__terminal_snapshot_branches_force_delete_confirm_modal.snap  snapshots__terminal_snapshot_branches_rebase_modal.snap  snapshots__terminal_snapshot_branches_remote_delete_confirm_modal.snap  snapshots__terminal_snapshot_command_palette_modal.snap  snapshots__terminal_snapshot_commit_files_directory_diff.snap  snapshots__terminal_snapshot_commit_files_empty.snap  snapshots__terminal_snapshot_commit_files_loading.snap  snapshots__terminal_snapshot_commit_files_subpanel.snap  snapshots__terminal_snapshot_commits_details_diff.snap  snapshots__terminal_snapshot_conflict_repo_120x40.snap  snapshots__terminal_snapshot_dirty_repo_100x30.snap  snapshots__terminal_snapshot_empty_repo_80x24.snap  snapshots__terminal_snapshot_files_commit_editor_modal.snap  snapshots__terminal_snapshot_files_details_pending_loading.snap  snapshots__terminal_snapshot_files_details_scrolled_down.snap  snapshots__terminal_snapshot_files_discard_confirm_modal.snap  snapshots__terminal_snapshot_files_discard_confirm_modal_fullscreen.snap  snapshots__terminal_snapshot_files_discard_confirm_multiselect_modal.snap  snapshots__terminal_snapshot_files_reset_hard_confirm_modal.snap  snapshots__terminal_snapshot_files_reset_modal.snap  snapshots__terminal_snapshot_files_reset_modal_nuke_description.snap  snapshots__terminal_snapshot_files_reset_nuke_confirm_modal.snap  snapshots__terminal_snapshot_files_stash_editor_modal.snap  snapshots__terminal_snapshot_force_push_confirm_modal.snap  snapshots__terminal_snapshot_huge_repo_metadata_only_status_notice.snap  snapshots__terminal_snapshot_large_directory_details_limit.snap  snapshots__terminal_snapshot_large_repo_fast_status_notice.snap  snapshots__terminal_snapshot_many_files_focus_expands_left_panel.snap  snapshots__terminal_snapshot_refresh_pending_loading.snap  snapshots__terminal_snapshot_stage_all_confirm_modal.snap  snapshots__terminal_snapshot_untracked_directory_marker_renders_as_directory_node.snap
src/: app.rs  backend.rs  (+5 more)
(+247 files in other folders)
