[package]
name = "ratagit"
version = "0.1.0"
edition = "2021"
authors = ["lpcv5 <lpengcheng149@gmail.com>"]
license = "MIT"
description = "A fast, intuitive terminal UI for Git"
repository = "https://github.com/lpcv5/ratagit"
keywords = ["git", "tui", "terminal", "ratatui"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
anyhow = "1"
crossterm = { version = "0.29", features = ["event-stream"] }
env_logger = "0.11"
git2 = "0.19"
log = "0.4"
paste = "1.0"
ratatui = "0.30"
tokio = { version = "1.40", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dev-dependencies]
tempfile = "3.10"
assert_matches = "1.5"
tokio-test = "0.4"
serial_test = "3.0"

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security", "Win32_System_Registry", "Win32_Security_Cryptography"] }
