[package]
name = "ratagit-app"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = "0.29"
ratagit-core = { path = "../ratagit-core" }
ratagit-git = { path = "../ratagit-git" }
ratagit-harness = { path = "../ratagit-harness" }
ratagit-observe = { path = "../ratagit-observe" }
ratagit-testkit = { path = "../ratagit-testkit" }
ratagit-ui = { path = "../ratagit-ui" }
