[package]
name = "ratagit-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ratagit-core.workspace = true
ratatui.workspace = true
unicode-width.workspace = true

[dev-dependencies]
insta.workspace = true
ratagit-testkit.workspace = true
